--- a/index.html
+++ b/index.html
@@ -232,8 +232,8 @@
         // ==========================================
         // ⚠️ การตั้งค่า Google Drive Picker (คุณต้องใส่ข้อมูลนี้)
         // ==========================================
-        const GOOGLE_API_KEY = 'ใส่_API_KEY_สำหรับ_DRIVE_ตรงนี้'; 
-        const GOOGLE_CLIENT_ID = 'ใส่_CLIENT_ID_สำหรับ_OAUTH_ตรงนี้';
+        const GOOGLE_API_KEY = 'AIzaSyCCzqelvtNmWal7l_GlY6nyc7fI9LvhRJw'; 
+        const GOOGLE_CLIENT_ID = '446093303322-5sksg8sflshmq9df4d9f72nnt3v9gcv6.apps.googleusercontent.com';
         const SCOPES = 'https://www.googleapis.com/auth/drive.readonly';
         
         let pickerApiLoaded = false;
